--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,12 @@
  * Random Quote Generator - CSS
  */
 
- @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap');
+@import url("https://fonts.googleapis.com/css?family=PT+Sans&display=swap");
 
 body {
-  background-color: rgb(58, 193, 98);
+  background-color: rgb(0, 64, 83);
   color: white;
-  font-family: 'Playfair Display', serif;
+  font-family: "PT Sans", sans-serif;
   padding: 5px;
 }
 
@@ -46,10 +46,18 @@ h1 {
 }
 
 @keyframes buttonShine {
-  0% {filter: brightness(1)}
-  25% {filter: brightness(2)}
-  85% {filter: brightness(2)}
-  100% {filter: brightness(1)}
+  0% {
+    filter: brightness(1);
+  }
+  25% {
+    filter: brightness(2);
+  }
+  85% {
+    filter: brightness(2);
+  }
+  100% {
+    filter: brightness(1);
+  }
 }
 
 .load-quote:focus {
@@ -97,7 +105,8 @@ h1 {
   position: absolute;
 }
 
-.source {
+.source,
+.tags {
   font-size: 1rem;
   letter-spacing: 0.05em;
   line-height: 1.1;
